# px4_drone_control_bachelors_thesis

./: .gitignore  README.md  commands.txt
PlotJugglerSetUp/: state_vector.xml
angle_calculator/: CMakeLists.txt  package.xml
angle_calculator/src/: angle_calculator_node.cpp
angle_calculator/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
angle_calculator/src/log/: latest_build
angle_stamped_msg/: CMakeLists.txt  package.xml
angle_stamped_msg/msg/: Angle.msg  AngleHeader.msg  AngleStamped.msg
controller_prototype/: CMakeLists.txt  package.xml
controller_prototype/include/: pid.cpp  pid.h
controller_prototype/src/: controller_prototype_node.cpp
coordinate_frame/: package.xml  setup.cfg  setup.py
coordinate_frame/coordinate_frame/: coordinate_frame_publisher.py
dlq_k_matrix_calculator/: package.xml  setup.cfg  setup.py
dlq_k_matrix_calculator/dlq_k_matrix_calculator/: dlq_k_matrix_calculator.py
drone_gui_node/: CMakeLists.txt  package.xml
drone_gui_node/src/: gui_node.cpp
drone_gui_node/src/qt/: ConnectionManager.cpp  ConnectionManager.h  DroneVisualWidget.cpp  DroneVisualWidget.h  DroneVisualWindow.cpp  DroneVisualWindow.h  MyWindow.cpp  MyWindow.h  main.cpp
drone_pose_stamped/: CMakeLists.txt  package.xml
drone_pose_stamped/msg/: DroneHeader.msg  DronePose.msg  DronePoseStamped.msg
gazebo_ros2_bridge/: CMakeLists.txt  package.xml
gazebo_ros2_bridge/src/: bridge_node.cpp
gps_converter/: CMakeLists.txt  package.xml
gps_converter/src/: gps_converter_node.cpp
graphs/: .xdp-plot1.pdf_tex-C8EXRo  .xdp-plot2.pdf_tex-uWTPQZ  .xdp-plot3.pdf_tex-eW5Uz4  .xdp-plot4.pdf_tex-FXbRiL  plot.py  plot_specific.py  plot_specific_noise.py  test_plot.py
graphs/data/circle/init6/: data.csv  statistics.csv
graphs/data/waypoint/init_angle_7/: data.csv  statistics.csv
gz-plugins/drone_pose_plugin/: CMakeLists.txt  drone_pose_plugin.cpp  drone_pose_stamped.pb.cc  drone_pose_stamped.pb.h  drone_pose_stamped.proto  package.xml
gz-plugins/gz_pose_plugin/: CMakeLists.txt  backup_load_pose_plugin.cpp  backup_plugin.cpp  gz_pose_plugin.cpp  load_pose_stamped.pb.cc  load_pose_stamped.pb.h  load_pose_stamped.proto  package.xml
gz-plugins/gz_pose_plugin/install/: local_setup.sh  setup.sh  setup.zsh
gz-plugins/gz_pose_plugin/log/: latest_build
install/: local_setup.sh  setup.bash  setup.sh
install/angle_calculator/lib/angle_calculator/: angle_calculator_node
install/angle_calculator/share/ament_index/resource_index/parent_prefix_path/: angle_calculator
install/angle_calculator/share/angle_calculator/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/libmavconn/share/libmavconn/: local_setup.sh  package.sh
install/move_forward/share/move_forward/: package.bash  package.zsh
install/px4_msgs/share/ament_index/resource_index/parent_prefix_path/: px4_msgs
install/px4_msgs/share/px4_msgs/: package.sh
load_imu_subscriber/: CMakeLists.txt
load_imu_subscriber/src/: subscriber.cpp
load_pose_stamped/: CMakeLists.txt  package.xml
load_pose_stamped/msg/: LoadHeader.msg  LoadPoseStamped.msg
log/: latest_build
lqr_controller/: CMakeLists.txt  package.xml
lqr_controller/launch/: lqr_controller_launch.py
lqr_controller/src/: PIDController.cpp  PIDController.h  lqr_controller_node.cpp  params.yaml
matlab/: ControlSystemDesignerSession_pid.mat  bakalarka.mlx  lqrRegulator.slx  lqrRegulator.slx.original  lqrRegulator.slxc  lqr_nonlinear.slx  lqr_nonlinear.slx.original  lqr_nonlinear.slxc  new_version_with_correct_eq.slx  new_version_with_correct_eq.slxc
matlab/slprj/modeladvisor/com_2emathworks_2ecgo_2egroup_/lqrRegulator/20/: ModelAdvisorData
matlab/slprj/sim/varcache/lqrRegulator/: checksumOfCache.mat  varInfo.mat
matlab/slprj/sim/varcache/lqrRegulator/tmwinternal/: simulink_cache.xml
matlab/slprj/sim/varcache/lqr_nonlinear/: checksumOfCache.mat  varInfo.mat
matlab/slprj/sim/varcache/lqr_nonlinear/tmwinternal/: simulink_cache.xml
matlab/slprj/sim/varcache/new_version_with_correct_eq/: checksumOfCache.mat  varInfo.mat
matlab/slprj/sim/varcache/new_version_with_correct_eq/tmwinternal/: simulink_cache.xml
move_forward/: CMakeLists.txt  package.xml
move_forward/src/: move_forward_node.cpp
pid_prototype/: CMakeLists.txt  package.xml
pid_prototype/src/: pid_prototype.cpp
rosbags/: converter.py
rosbags/circle_final_working_version/: metadata.yaml
rosbags/circle_final_working_version_new/: metadata.yaml
rosbags/circle_no_dumping/: metadata.yaml
rosbags/circle_no_dumping_correct/: metadata.yaml
rosbags/circle_no_dumping_test/: metadata.yaml
rosbags/circle_white_noise/: metadata.yaml
rosbags/random_test/: metadata.yaml
rosbags/rosbag2_2024_03_02-11_53_15/: metadata.yaml  rosbag2_2024_03_02-11_53_15_0.db3
rosbags/testing/test_rosbag/: metadata.yaml
rosbags/testing/waypoint_10_10/: metadata.yaml
rosbags/waypoint_10_10_debug/: metadata.yaml
rosbags/waypoint_10_10_debug_another/: metadata.yaml
rosbags/waypoint_10_10_debug_another_verson/: metadata.yaml
rosbags/waypoint_10_10_final/: metadata.yaml
rosbags/waypoint_10_10_final_version/: metadata.yaml
rosbags/waypoint_10_10_final_working_version/: metadata.yaml
scripts/: clean_up_script.sh  config.yaml  pid_list.txt  register_gazebo_plugins.sh  restartSimulation.sh  setup_ws.sh  simulationPID.txt  test.sh  test2.sh
state_sync_for_controller/: CMakeLists.txt  package.xml
state_sync_for_controller/src/: state_sync_for_controller_node.cpp
state_vector_msg/: CMakeLists.txt  package.xml
state_vector_msg/msg/: StateVector.msg
topic_subscriber/: CMakeLists.txt  package.xml
topic_subscriber/src/: topic_subscriber_node.cpp
x500_backup/: model.sdf  world.sdf
