<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_gui_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="l.kozel@outlook.cz">luky</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>load_pose_stamped</depend>
  <depend>drone_pose_stamped</depend>
  <depend>angle_stamped_msg</depend>


  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>qt5_charts</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
