<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros2_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="l.kozel@outlook.cz">luky</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>libgz-cmake3-dev</build_depend>
  <build_depend>libgz-sim7-dev</build_depend>
  <depend>load_pose_stamped</depend>
  <depend>drone_pose_stamped</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
