<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_forward</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="l.kozel@outlook.cz">luky</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Add these lines for rclcpp and px4_msgs dependencies -->
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
